# xroadracer

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in
data/cars/: Makefile.am  Makefile.in
data/construct/: Makefile.am  Makefile.in
data/fonts/: Makefile.am  Makefile.in
data/images/: Makefile.am  Makefile.in
data/images/hud/: Makefile.am  Makefile.in
data/images/lights/: Makefile.am  Makefile.in
data/maps/: Makefile.am  Makefile.in
data/maps/custom/: Makefile.am  Makefile.in  jungle  map1  map1.txt  map1_checkp  map2  map2.txt  map3  map3.txt  roadagain  roadagain.txt  roadagain_checkp
data/maps/static/: Makefile.am  Makefile.in  heightfing.txt  longroad.txt  map1.txt  mapdesigned1.txt  pro1.txt  race1.txt  road1.txt  simsilver.txt  softloop.txt  speedway.txt  streetmap1.txt  urban1.txt  waychoice.txt  xaramap.txt
src/: Makefile.am  Makefile.in  angular.c  angular.h  calcul.c  calcul.h  car.c  car.h  car_move.c  car_move.h  carlist.c  carlist.h  checkpoints.c  checkpoints.h  collision.c  collision.h  computer.c  computer.h  custom.c  custom.h  debug.h  define.h  editor.c  editor.h  fill.c  fill.h  hud.c  hud.h  image.c  image.h  init.c  init.h  input.c  input.h  key.c  key.h  load.c  load.h  main.c  main.h  (+27 more)
training/: map1_road.txt  map1_road_bw.net  map1_road_bw.txt  map1_road_bw_left.net  map1_road_bw_left.txt  map1_road_bw_right.net  map1_road_bw_right.txt  map1_road_fw.net  map1_road_fw.txt  map1_road_fw_left.net  map1_road_fw_left.txt  map1_road_fw_right.net  map1_road_fw_right.txt  map1_road_left.net  map1_road_left.txt  map1_road_none.net  map1_road_none.txt  map1_road_right.net  map1_road_right.txt  test.c  train.c  train.sh  train_offroad.sh  train_road.sh  transform.py  transform.sh
