SUBDIRS = data src

#desktopdir = $(datadir)/applications
#desktop_in_files = jola.desktop.in
#desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
#@INTLTOOL_DESKTOP_RULE)@
#
#EXTRA_DIST = jola.desktop.in \
#	intltool-extract.in \
#	intltool-merge.in \
#	intltool-update.in
#
#DISTCLEANFILES = intltool-extract \
#	intltool-merge \
#	intltool-update
#
#clean-local:
#	rm -f jola.desktop
#	rm -f po/.intltool-merge-cache

