
#SDL_CFLAGS=`sdl-config --cflags`
#SDL_LIBS=`sdl-config --libs` -lSDL_ttf -lSDL_image -lSGE -lm

#INCLUDES = -I$(top_srcdir) \
#	$(SDL_CFLAGS)

#LIBS = $(SDL_LIBS)

#AM_CXXFLAGS = $(INTI_CFLAGS)
#AM_CCFLAGS = -Wall -D_GNU_SOURCE
#Xroadracer_SOURCES = angular.c calcul.c car.c \
#carlist.c car_move.c checkpoints.c collision.c \
#custom.c editor.c fill.c hud.c image.c \
#init.c input.c key.c load.c main.c mapdesigned.c \
#mask.c menu.c offset.c pixel.c primitive.c read.c \
#show.c start.c text.c time.c computer.c
#Xroadracer_LDADD = 
#Xroadracer_LDFLAGS = `sdl-config --cflags --libs` \
#"-lSDL_ttf \
#-lSDL_image \
#-lSGE \
#-lm \
#-D_GNU_SOURCE
#$(INTI_LIBS)

#angular.c \
#	calcul.c \
#	car.c \
#	carlist.c \
#	car_move.c \
#	checkpoints.c \
#	collision.c \
#	custom.c \
#	editor.c \
#	fill.c \
#	hud.c \
#	image.c \
#	init.c \
#	input.c \
#	key.c \
#	load.c \
#	main.c \
#	mapdesigned.c \
#	mask.c \
#	menu.c \
#	offset.c \
#	pixel.c \
#	primitive.c \
#	read.c \
#	show.c \
#	start.c \
#	text.c \
#	time.c \
#	computer.c

bin_PROGRAMS = jola
jola_SOURCES = angular.c checkpoints.c fill.c input.c mask.c read.c calcul.c collision.c hud.c key.c menu.c show.c car.c computer.c load.c offset.c start.c carlist.c custom.c image.c main.c pixel.c text.c car_move.c editor.c init.c mapdesigned.c primitive.c time.c \
angular.h collision.h fill.h load.h offset.h struct_car.h calcul.h computer.h hud.h main.h pixel.h text.h car.h custom.h image.h mapdesigned.h primitive.h time.h carlist.h debug.h init.h map_struct.h read.h car_move.h define.h input.h mask.h show.h checkpoints.h editor.h key.h menu.h start.h struct_points.h points.h points.c
