
constructdir = $(prefix)/games/$(PACKAGE)/construct
construct_DATA = \
road_001.png \
road_002.png \
road_003.png \
road_004.png \
road_005.png \
road_006.png \
road_007.png \
road_008.png \
road_009.png \
road_010.png \
road_011.png \
road_012.png \
road_013.png \
road_014.png \
road_mini001.png \
road_mini002.png \
road_mini003.png \
road_mini004.png \
road_mini005.png \
road_mini006.png \
road_mini007.png \
road_mini008.png \
road_mini009.png \
road_mini010.png \
road_mini011.png \
road_mini012.png \
road_mini013.png \
road_mini014.png

EXTRA_DIST = ${construct_DATA}
