staticdir = $(prefix)/games/$(PACKAGE)/maps/static
static_DATA = heightfing_checkp.png heightfing.png heightfing_road.png heightfing.txt longroad_checkp.png longroad.png longroad_road.png longroad.txt map1_checkp.png map1_collision.png map1.png map1_road.png map1.txt mapdesigned1_checkp.png mapdesigned1.png mapdesigned1_road.png mapdesigned1.txt pro1_checkp.png pro1.png pro1_road.png pro1.txt race1_checkp.png race1_collision.png race1.png race1_road.png race1.txt road1_checkp.png road1.png road1_road.png road1.txt simsilver_checkp.png simsilver.png simsilver_road.png simsilver.txt softloop_checkp.png softloop.png softloop_road.png softloop.txt speedway_checkp.png speedway.png speedway_road.png speedway.txt streetmap1_checkp.png streetmap1.png streetmap1_road.png streetmap1.txt urban1_checkp.png urban1_collision.png urban1.png urban1_road.png urban1.txt waychoice_checkp.png waychoice.png waychoice_road.png waychoice.txt xaramap_checkp.png xaramap.png xaramap_road.png xaramap.txt

EXTRA_DIST = ${static_DATA}
